--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <main>
         <section id="login">
             <form action="#" onsubmit="login(event)">
-                <div id="imagem">
-                </div>
+                <div id="imagem"></div>
 
                 <div id="formulario">
-                    <h1>login</h1>
+                    <h1>Acesse sua conta</h1>
                     <p>
                         <label for="inome">Nome:</label>
                         <input type="text" name="nome" id="inome" required>
@@ -26,7 +25,7 @@
                     </p>
                 </div>
                 <div>
-                    <input type="submit" value="Cadastrar">
+                    <input type="submit" value="Acessar">
                 </div>
                 <div id="res"></div>
             </form>
